--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3000
 SECRET_KEY='s3cree3t'
 DB_URI='mongodb+srv://admin:123@cluster0-rmzfz.mongodb.net/locker?retryWrites=true'
+USERNAME='admin'
+PASSWORD='admin123'
