--- a/package.json
+++ b/package.json
@@ -18,13 +18,21 @@
   },
   "homepage": "https://github.com/TISparta/locker-server#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.3",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
-    "koa": "^2.7.0",
-    "koa-bodyparser": "^4.2.1",
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
+    "express-session": "^1.16.1",
+    "helmet": "^3.16.0",
     "koa-helmet": "^4.1.0",
-    "koa-respond": "^2.1.0",
-    "koa-router": "^7.4.0",
-    "mongoose": "^5.5.3"
+    "mongoose": "^5.5.3",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
