--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 SECRET_KEY='s3cree3t'
-DB_URI='mongodb+srv://admin:123@cluster0-rmzfz.mongodb.net/locker?retryWrites=true'
+DB_URI='mongodb://admin:admin123@ds213705.mlab.com:13705/academe'
 USERNAME='admin'
 PASSWORD='admin123'
