--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SECRET_KEY='s3cree3t'
 DB_URI='mongodb://admin:admin123@ds213705.mlab.com:13705/academe'
 USERNAME='admin'
 PASSWORD='admin123'
+MAP_API='AIzaSyCOpyNedLt7ouwBMhS_hdNFYuosqW_irCA'
