--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.16.1",
+    "fs-extra": "^7.0.1",
     "helmet": "^3.16.0",
     "koa-helmet": "^4.1.0",
     "mongoose": "^5.5.3",
