--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 SECRET_KEY='s3cree3t'
-DB_URI='mongodb://admin:admin123@ds213705.mlab.com:13705/academe'
+DB_URI='mongodb://localhost/locker'
 USERNAME='admin'
 PASSWORD='admin123'
 MAP_API='AIzaSyCOpyNedLt7ouwBMhS_hdNFYuosqW_irCA'
